# rust-dock

./: .env.example  .gitignore  Cargo.toml  README.md
src/: cli.rs  docker.rs  main.rs
