[package]
name = "my-docker"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.18.1" # For Docker API integration
clap = {version="4.5.21", features =["derive"]} # For building the CLI
tokio = {version="1.41.1", features =["full"]}  # Asynchronous runtime
future-utils = "0.3" # Utilities for async programming
dotenv = "0.15.0"
